<resources>
    <string name="app_name">OnlineLibrary</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="register_btn">Register</string>
    <string name="back_to_home">Back to home</string>
    <string name="have_account_login">Have account? Login.</string>
    <string name="nickname">Nickname</string>
    <string name="optional_name">Optional: Name</string>
    <string name="optional_surname">Optional: Surname</string>
    <string name="btn_loading">Loading..</string>
    <string name="not_account">Don\'t have account? Login</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>
    <string name="books_page_title">Books</string>
    <string name="add_book">Add Book</string>
    <string name="image_url">Image URL</string>
    <string name="description">Description</string>
    <string name="author">Author</string>
    <string name="title">Title</string>
    <string name="number_of_copies">Number of Copies</string>
    <string name="edit_book">Edit Book</string>
    <string name="book_cover_image">Book cover image</string>
    <string name="logout">Logout</string>
    <string name="loan_book">Loan Book</string>
    <string name="filter_users_by_nickname">Filter users by nickname</string>
    <string name="filter_books_by_title">Filter books by title</string>
    <string name="search">Search</string>
    <string name="active_loans">Active Loans</string>
    <string name="history_loans">Returned Loans</string>
    <string name="no_active_loans">No active loans</string>
    <string name="none_returned">None of the loaned books have been returned.</string>
    <string name="save">Save</string>
    <string name="account">Account</string>
</resources>