<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFFFFF">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filter_users_by_nickname">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filterUserInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/userSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/filter_books_by_title">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/filterBookInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/bookSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>



        <com.google.android.material.button.MaterialButton
            android:id="@+id/loanBookButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loan_book"
            android:enabled="false"
            android:layout_marginTop="16dp"
            app:backgroundTint="@color/save_button_background"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
